# dsp-tools

./: .darglint  .editorconfig  .gitignore  .gitmodules  .kodus-readiness.yml  .markdownlint.json  .markdownlint.yml  .pre-commit-config.yaml  .sourcery.yaml  .travis.yml  .viztracerrc  .vulture_whitelist.py  .yaml-lint.yml  .yamlfmt.yml  .yamllint.yml  404.html  ARCHITECTURAL_REMEDIATION_PLAN.md  Analysis of Exception Hierarchy and Handling.md  BUILD  CHANGELOG.md  CLAUDE.md  CONVENTIONS.md  Draft for Error Handling Guideline.md  Draft for Error Handling Guidelines Do.md  EXCEPTION_DOCUMENTATION_INDEX.md  EXCEPTION_FLOW_DIAGRAMS.md  EXCEPTION_HIERARCHY_ANALYSIS_V2.md  EXCEPTION_HIERARCHY_CRITICAL_ANALYSIS.md  EXCEPTION_OWN_THOUGHTS.md  EXCEPTION_OWN_THOUGHTS_V2.md  EXCEPTION_SYSTEM_MAP.md  EXCEPTION_SYSTEM_SUMMARY.txt  MANIFEST.in  Makefile  Pipfile  README.md  REVIEW.md  WORKSPACE  __init__.py  bump_deps.py  (+21 more)
test/: BUILD  BUILD.bazel  conftest.py  context.py  doc-test-onto.json  exception.py  knora-schema.json  lists.json  test-data.xml  test-onto.json  test_Connection.py  test_Group.py  test_KnoraConnection.py  test_KnoraGroup.py  test_KnoraProject.py  test_KnoraUser.py  test_ListNode.py  test_Project.py  test_User.py  test_all.py  test_connection.py  test_create_ontology.py  test_create_resource.py  test_group.py  test_id_to_iri.py  test_knora.py  test_langstring.py  test_listnode.py  test_ontology.py  test_project.py  test_propertyclass.py  test_resource.py  test_resourceclass.py  test_tools.py  test_user.py  test_value.py  tools_testcontainers.py
test/benchmarking/: create_large_xml_files.py  create_xml_files_every_value_type.py  test_stash_circular_references.py
test/distribution/: test_cli.py  test_cli_deps_resources.py  test_schema_shipping.py  test_xmllib.py
test/e2e/: BUILD.bazel  CLAUDE.md  conftest.py  setup_testcontainers.py  test_00A1_import_scripts.py  test_0123_import_scripts.py  test_cli.py  test_cli_with_mock.py  test_connection.py  test_connection_live.py  test_create_and_xmlupload.py  test_create_get_xmlupload.py  test_create_lists.py  test_create_project_with_testcontainers.py  test_fast_xmlupload.py  test_group.py  test_listnode.py  test_ontology.py  test_project.py  test_propertyclass.py  test_resource.py  test_resourceclass.py  test_rosetta.py  test_tools.py  test_user.py  test_validate_data.py  test_validate_data_2.py  test_validate_data_3.py  test_xmlupload.py  tools_testcontainers.py
test/e2e_validate_data/: conftest.py  setup_testcontainers.py  test_edge_cases.py  test_generic_correct.py  test_generic_violations.py  test_generic_warning_and_info.py  test_validate_data.py  util.py
test/fast_xmlupload/: test_fast_xmlupload.py
test/integration/: conftest.py  test_create_project_with_testcontainers.py  test_rosetta.py
test/legacy_e2e/: test_create_get_xmlupload.py
test/packaging/: test_cli.py
test/unittests/: BUILD.bazel  test_00A1_import_scripts.py  test_cli.py  test_cli_with_mock.py  test_convert_ark_v0_to_resource_iri.py  test_create_ontology.py  test_create_project.py  test_csv2xml.py  test_excel2xml.py  test_excel_to_json_lists.py  test_excel_to_json_properties.py  test_excel_to_json_resources.py  test_excel_to_properties.py  test_excel_to_resource.py  test_generate_templates.py  test_id2iri.py  test_id_to_iri.py  test_langstring.py  test_shared.py  test_shared_methods.py  test_update_text_prop.py  test_value.py  test_xml_upload_stash.py  test_xmlupload.py  test_xmlvalue.py
testdata/: 0123-data-processed-expected.xml  BUILD  BUILD.bazel  Properties.xlsx  Resources.xlsx  USED_SHORTCODE_SHORTNAMES.md  anything-onto.json  anything.json  broken-xml.xml  circular-onto.json  data-processed-expected.xml  error-onto.json  excel2json-expected-output.json  excel2xml-expected-output.xml  excel2xml-testdata-special-characters.xlsx  excel2xml-testdata.csv  excel2xml-testdata.xls  excel2xml-testdata.xlsx  list-as-excel.xlsx  lists_multilingual_output_expected.json  lists_section_expanded.json  migrated-data-expected.xml  test-data-invalid-resource-tag.xml  test-data-minimal.xml  test-data-systematic.xml  test-data.xml  test-id2iri-data.xml  test-id2iri-mapping.json  test-list.json  test-onto-minimal.json  test-onto.json  test-permissions.xml  test-project-circular-ontology.json  test-project-enhanced-xmlupload.json  test-project-invalid-super-property.json  test-project-minimal.json  test-project-systematic.json  test_config.json
testdata/bitstreams/: BUILD.bazel  README.txt  TEMP11.TIF  TEMP12.TIF  TEMP13.TIF  TEMP14.TIF  TEMP15.TIF  test.csv  test.doc  test.docx  test.epub  test.gzip  test.html  test.jp2  test.odd  test.ppt  test.rng  test.tar  test.tgz  test.tiff  test.txt  test.xls  test.xlsx  test.xml  test.xsd  test.xsl  test.xslt
testdata/data-validate/: project.json
testdata/docker/: docker-compose.yml
testdata/dsp-ingest-data/: dsp-ingest.xml  dsp_ingest_no_mapping.xml  mapping-00A2.csv
testdata/dsp-ingest_data/: dsp-ingest.json  dsp-ingest.xml  mapping-00A1.csv
testdata/e2e/: admin_user_data.ttl  repo_config.ttl  sipi.docker-config.lua
testdata/excel2json/: excel2json-expected-output.json  expected_json_header.json  lists-output-expected.json  lists-section-expanded.json  new-lists-output-expected.json  old-lists-multilingual-output-expected.json  properties-output-expected.json  resources-output-expected.json
testdata/excel2xml/: 00A1-data-processed-expected.xml  0123-data-processed-expected.xml  excel2xml-expected-output.xml  excel2xml-testdata.csv  excel2xml-testdata.xls  excel2xml-testdata.xlsx
testdata/generate_test_data/: create_complex_circular_references.py  test_circles_onto.json  test_circular_references_1.xml
testdata/id2iri/: test-id2iri-data.xml  test-id2iri-mapping.json  test-id2iri-output-expected.xml
testdata/invalid_lists_1/: en.xlsx
testdata/invalid_testdata/: excel2json_properties_wrong_super.xlsx  excel2xml-testdata-invalid-boolean-prop-two-values.xlsx  excel2xml-testdata-invalid-empty-property.xlsx  excel2xml-testdata-invalid-id-propname-both.xlsx  excel2xml-testdata-invalid-id-propname-none.xlsx  (+10 more)
(+2834 files in other folders)
