# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#writing-pyproject-toml

[project]
name = "dsp-tools"
version = "16.6.0"
description = "DSP-TOOLS is a Python package with a command line interface that helps you interact with a DaSCH service platform (DSP) server."
authors = [
    { name = "DaSCH - Swiss National Data and Service Center for the Humanities", email = "info@dasch.swiss" },
]
readme = "docs/index.md"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "argparse",
    "dotenv",
    "jinja2",
    "jsonpath-ng",
    "jsonschema",
    "loguru",
    "lxml",
    "networkx",
    "openpyxl",
    "packaging",
    "pandas[excel]",
    # pandas: "excel" is an extra that contains xlrd that is necessary for reading old .xls Excel files
    "polars",
    "pyld",
    "pyyaml",
    "rdflib",
    "regex",
    "requests",
    "rustworkx",
    "tqdm",
    "typing-extensions",
]


[project.urls]
Homepage = "https://www.dasch.swiss/"
Documentation = "https://docs.dasch.swiss/latest/DSP-TOOLS/"
Repository = "https://github.com/dasch-swiss/dsp-tools.git"


[project.scripts]
dsp-tools = "dsp_tools.cli.entry_point:main" # definition of the CLI entry point


[build-system]
# Tells “frontend” build tools (like pip, build, or uv) what “backend” build tool to use (e.g. setuptools, hatchling).
# The "backend" doesn't need to be installed. It will be installed by the "frontend" in a temporary, isolated
# environment for use during the build process.
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv]
dev-dependencies = [
    "darglint",
    "docker",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocs",
    "mkdocstrings[python]",
    "mypy",
    "pandas-stubs",
    "pre-commit",
    "pytest-cov",
    "pytest-unordered",
    "pytest-xdist",
    "pytest",
    "requests-mock",
    "ruff",
    "testcontainers",
    "tomlkit",
    "types-docker",
    "types-jsonschema",
    "types-lxml",
    "types-networkx",
    "types-openpyxl",
    "types-pyyaml",
    "types-regex",
    "types-requests",
    "types-tqdm",
    "viztracer",
    "vulture",
    "yamllint",
]


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
# see https://docs.pytest.org/en/latest/explanation/goodpractices.html#tests-outside-application-code
pythonpath = [".", "src", "test"]


[tool.mypy]
show_column_numbers = true
strict = true
enable_error_code = ["possibly-undefined"]
exclude = [
    "src/dsp_tools/legacy_models/datetimestamp.py",
    "src/dsp_tools/legacy_models/langstring.py",
    "src/dsp_tools/legacy_models/projectContext.py",
    "src/dsp_tools/commands/project/legacy_models/context.py",
    "src/dsp_tools/commands/project/legacy_models/group.py",
    "src/dsp_tools/commands/project/legacy_models/helpers.py",
    "src/dsp_tools/commands/project/legacy_models/listnode.py",
    "src/dsp_tools/commands/project/legacy_models/ontology.py",
    "src/dsp_tools/commands/project/legacy_models/project.py",
    "src/dsp_tools/commands/project/legacy_models/propertyclass.py",
    "src/dsp_tools/commands/project/legacy_models/resourceclass.py",
    "src/dsp_tools/commands/project/legacy_models/user.py",
]


[[tool.mypy.overrides]]
# For these packages, no type stubs are available yet:
module = ["jsonpath_ng.*", "viztracer.*", "pyld.*", "testcontainers.*"]
ignore_missing_imports = true


[tool.ruff]
line-length = 120


[tool.ruff.lint]
select = [
    "RUF",   # ruff-specific rules
    "PL",    # pylint
    "I",     # isort
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "A",     # flake8-builtins
    "BLE",   # flake8-blind-except
    "ARG",   # flake8-unused-arguments
    "S",     # flake8-bandit plugin which checks for security issues
    "YTT",   # flake8-2020 plugin, which checks for misuse of `sys.version` or `sys.version_info`
    "ASYNC", # flake8-async plugin, which checks for bad async / asyncio practices
    "ISC",   # flake8-implicit-str-concat plugin, which checks for problematic string concatenation
    "INP",   # flake8-no-pep420 plugin, which checks for missing __init__.py files
    "PIE",   # flake8-pie plugin, which does miscellaneous checks
    "PT",    # flake8-pytest-style plugin
    "TID",   # flake8-tidy-imports plugin
    "ICN",   # flake8-import-conventions plugin, which checks for import conventions
    "PGH",   # pygrep-hooks: A collection of fast, cheap, regex based pre-commit hooks
    "UP",    # pyupgrade
    "D101",  # pydocstyle: undocumented-public-class
    "D102",  # pydocstyle: undocumented-public-method
    "D103",  # pydocstyle: undocumented-public-function
    "D417",  # pydocstyle: undocumented-param
    "B023",  # flake8-bugbear: function-uses-loop-variable
    "FIX",   # flake8-fixme: checks for FIXME, TODO, XXX, etc.
]
ignore = [
    "ISC001", # flake8-implicit-str-concat: single-line-implicit-string-concatenation  # incompatible with the formatter
    "S105",   # flake8-bandit: hardcoded password
    "S106",   # flake8-bandit: hardcoded password
    "S603",   # flake8-bandit: subprocess-without-shell-equals-true
    "UP007",  # forbid use of typing.Union and typing.Optional
    "UP015",  # Unnecessary mode="r" argument in open()
    "UP045",  # Forced use of "|" instead of typing.Optional and typing.Union
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",    # unused-import
    "F403",    # undefined-local-with-import-star
    "PLC0414", # useless-import-alias
]
"testdata/**" = [
    "INP001", # implicit-namespace-package    # there are some python files, but no __init__.py
]
"test/*" = [
    "D103", # pydocstyle: undocumented-public-function
    "D102", # pydocstyle: undocumented-public-method
    "D101", # pydocstyle: undocumented-public-class
    "S101", # flake8-bandit: use of assert
]
"!src/dsp_tools/xmllib/**.py" = ["D103"]  # Ignore everywhere except for the `src/dsp_tools/xmllib/` directory.
"src/dsp_tools/legacy_models/**" = [
    "PLW"
]


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint.isort]
force-single-line = true


[tool.vulture]
paths = ["src/dsp_tools", ".vulture_whitelist.py"]
exclude = [
    "src/dsp_tools/xmllib/",
    "src/dsp_tools/error/xmllib_warnings.py",
    "src/dsp_tools/error/xmllib_warnings_util.py",
    "src/dsp_tools/commands/excel2xml/",
    "test/",
]
sort_by_size = true  # sort unused classes and functions by size 
