# make the python rules available
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

# make the dependencies from requirements.txt available
load("@knora_py_deps//:requirements.bzl", "requirement")


py_test(
    name = "test_id_to_iri",
    srcs = ["test_id_to_iri.py"],
    data = [
            "//testdata:testdata"
        ]
)

py_test(
    name = "test_langstring",
    srcs = ["test_langstring.py"],
    deps = [
        "//knora/dsplib/models:langstring",
    ]
)

py_test(
    name = "test_value",
    srcs = ["test_value.py"],
    deps = [
        "//knora/dsplib/models:value",
        "//knora/dsplib/models:group",
        "//knora/dsplib/models:helpers"
    ]
)
