# make the python rules available
load("@rules_python//python:defs.bzl", "py_test")

# make the dependencies from requirements.txt available
load("@knora_py_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_test(
    name = "test_convert_ark_v0_to_resource_iri",
    srcs = ["test_convert_ark_v0_to_resource_iri.py"],
    deps = [
        "//knora/dsplib/utils:xml_upload",
        "//knora/dsplib/models:helpers"
    ],
)

py_test(
    name = "test_excel_to_json_lists",
    srcs = ["test_excel_to_json_lists.py"],
    deps = [
        "//knora/dsplib/utils:excel_to_json_lists"
    ],
    data = [
        "//testdata",
    ]
)

py_test(
    name = "test_langstring",
    srcs = ["test_langstring.py"],
)

py_test(
    name = "test_value",
    srcs = ["test_value.py"],
    deps = [
        "//knora/dsplib/models:group",
        "//knora/dsplib/models:helpers",
        "//knora/dsplib/models:value",
    ],
)

py_test(
    name = "test_id_to_iri",
    srcs = ["test_id_to_iri.py"],
    data = [
        "//testdata",
    ],
)

py_test(
    name = "test_excel_to_resource",
    srcs = ["test_excel_to_resource.py"],
    data = [
        "//testdata",
    ],
)
