# make the python rules available
#load("@rules_python//python:defs.bzl", "py_binary", "py_library")

# make the dependencies from requirements.txt available
#load("@knora_py_deps//:requirements.bzl", "requirement")

filegroup(
    name = "bitstream",
    visibility = ["//visibility:public"],
    srcs = [
        "clara.wav",
        "TEMP11.TIF",
        "TEMP12.TIF",
        "TEMP13.TIF",
        "TEMP14.TIF",
        "TEMP15.TIF",
        "test.csv",
        "test.pdf",
        "test.zip"
    ]
)
